@@ -1,3 +1,6 @@
+07. Mar 2012 Christoph Thielecke <crissi99@gmx.de>
+	- storeing adddialog size and position added
+
 05. Mar 2012 Christoph Thielecke <crissi99@gmx.de>
 	- matching filetypes for context fixed
 	- thumbnail storing added
